# RAJA

./: .gitignore  Cargo.toml  README.md  build.rs  labels.txt  rust-toolchain  rust-toolchain.toml  snapcraft.yaml
data/: settings.json
model/: Cargo.toml
model/src/: app.rs  main.rs
model/src/app/: console.rs  editor.rs  pipeline_view.rs
res/ui/: main.ui
scripts/: bitter.s  div.s  err.s  float_input.s  int_input.s  mem.s  mul.s  pipe.s  stack.s  test.s
src/: app.rs  main.rs  pipeline.rs
src/app/: console.rs  editor.rs  watches.rs
src/controller/: Cargo.toml
src/controller/src/: app.rs
src/model/: Cargo.toml
src/model/src/: app.rs  callback.rs  data_types.rs  lib.rs  machine.rs  machine_input.rs  memory.rs  parser.rs  pipeline.rs  register.rs  register_file.rs  registers.rs  syscall.rs  syscall_handler.rs
src/model/src/app/: memory.rs  run_menu.rs  watches.rs
src/model/src/parser/: instruction.rs  opcode.rs  register.rs
src/model/src/parser/model/: instruction.rs
src/model/src/stages/: decode.rs  execute.rs  fetch.rs  memory.rs  writeback.rs
src/stages/: execute.rs
src/util/: Cargo.toml
src/util/src/: lib.rs  settings.rs  shared.rs
src/view/: Cargo.toml
src/view/res/: mal.lang  mono_style.css  resources.gresource.xml  style.css
src/view/res/ui/: app_window.ui  gtk_console.ui  main.ui
src/view/src/: adw_app.rs  adw_gui.rs  app_gui.rs  app_ui.rs  editor_ext.rs  ensure.rs  lib.rs  macros.rs  rc_mut.rs  source.rs  traits.rs
src/view/src/app_window/: imp.rs  mod.rs  template.rs  template.ui
src/view/src/gtk_console/: buffer_tags.rs  constants.rs  mod.rs  template.rs
src/view/src/main_view/: mod.rs  template.rs  template.ui
src/view/src/register_view/: mod.rs  template.rs  template.ui
view/: Cargo.toml
view/res/ui/: main.ui
view/src/: app_gui.rs
