[package]
name = "raja"
version = "0.1.0"
authors = [
    "Simon Akers",
    "Lauren Fleming",
    "James Pruitt <jamescpruitt@gmail.com>",
]
edition = "2021"

[[bin]]
name = "raja"

[workspace]
members = [
    "src/controller",
    "src/model",
    "src/view",
]

[dependencies]
controller = { path = "src/controller" }
view = { path = "src/view" }

[profile.release]
opt-level = 2 # fast and small wasm