[package]
name = "raja"
version = "0.1.0"
authors = [
    "Simon Akers",
    "James Pruitt <jamescpruitt@gmail.com>",
]
edition = "2021"
build = "build.rs"

[[bin]]
name = "raja"

[workspace]
members = [
    "src/controller",
    "src/model",
    "src/view",
]

[dependencies]
controller = { path = "src/controller" }
view = { path = "src/view" }

[build-dependencies]
gtk = { package = "gtk4", version = "0.4.8", features = ["v4_6"] }

[profile.release]
opt-level = 2 # fast and small wasm