[package]
name = "raja"
version = "0.1.0"
authors = [
    "Simon Akers",
    "James Pruitt <jamescpruitt@gmail.com>",
]
edition = "2021"

[[bin]]
name = "raja"

[workspace]
members = [
    "src/model",
    "src/view",
    "src/util",
]

[dependencies]
view = { path = "src/view" }

[profile.release]
opt-level = 2 # fast and small wasm