[package]
name = "model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.19"
thiserror = "1.0.29"
anyhow = "1.0.45"
clap = "2.33.3"
nom = "7.1.0"
num = "0.4.0"
#eframe = "0.18.0"
rfd = "0.8.1"
