[package]
name = "model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.19"
thiserror = "1.0.29"
anyhow = "1.0.45"
clap = "2.33.3"
nom = "7.1.0"
num = "0.4.0"
strum = "0.24"
strum_macros = "0.24"
rfd = "0.8.1"
debug_print = "1.0.0"
indexmap = "1.9.3"
