[package]
name = "view"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
model = { path = "../model" }
util = { path = "../util" }
adw = { package = "libadwaita", version = "0.2.0" }
gtk = { package = "gtk4", version = "0.5.0", features = ["v4_8"] }
sourceview5 = "0.5.0"
glib = "0.16.2"
dark-light = "0.2.3"
debug_print = "1.0.0"
